# Lucid

./: .dockerignore  .env.api  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .markdownlintignore.project  .pre-comit-config.yaml  .pre-commit-config.yaml  BREAKTHROUGH_ACHIEVED.md  BUILD-SUCCESS-SUMMARY.md  BUILD_ZONE_RULES.md  CENTRALIZED_DOCKER_STRUCTURE_SUMMARY.md  COMPLETION_REPORT.md  CONTAINER_BUILD_STRATEGY.md  CORE_SUPPORT_DEPLOYMENT_GUIDE.md  Clean-LucidFromLists.ps1  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_FIX_COMPLETE.md  DISTROLESS_DEPLOYMENT_FIXES_SUMMARY.md  DISTROLESS_DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DOCKER-NETWORK-FIXES.md  DOCKERFILE_COPY_COMMANDS_VERIFICATION.md  Dockerfile.lucid-direct  FINAL_COMPLIANCE_REPORT.md  GUI_API_BRIDGE_AUDIT_REPORT.md  GUI_API_BRIDGE_BUILD_COMPLETE.md  GUI_API_BRIDGE_DELIVERY_SUMMARY.md  GUI_API_BRIDGE_FINAL_VERIFICATION_REPORT.md  GUI_DOCKER_MANAGER_IMPLEMENTATION_COMPLETE.md  GUI_HARDWARE_MANAGER_AUDIT_REPORT.md  GUI_HARDWARE_MANAGER_COMPLETE_REPORT.md  GUI_HARDWARE_MANAGER_FINAL_SUMMARY.md  GUI_HARDWARE_MANAGER_VERIFICATION_COMPLETE.md  GUI_TOR_MANAGER_DELIVERY_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_FILES_README.md  LEGACY_DOCKERFILE_MOVE_SUMMARY.md  LEGACY_FILES_MOVE_SUMMARY.md  (+91 more)
03_api_gateway/api/: Dockerfile  __init__.py  generate-env.sh  pyproject.toml  tree_01.txt
configs/: .pre-comit-config.yaml  .pre-commit-config.yaml  _compose_resolved.yaml  mypy.ini  pyproject.toml  test-results.json
configs/.ssh/: id_ed25519  id_ed25519.pub
configs/container/: manifest.yml
configs/docker/: ALL_FIXES_APPLIED_SUMMARY.md  CRITICAL_OVERRIDE_ISSUES_FOUND.md  GUI_SERVICES_DEPLOYMENT.md  SECURITY_OVERRIDE_ANALYSIS.md  TRON_TOR_INTEGRATION.md  docker-compose.all.yml  docker-compose.application.yml  docker-compose.core.yml  docker-compose.foundation-02.yml  docker-compose.foundation.yml  docker-compose.gui-integration.yml  docker-compose.support.yml  docker.env
configs/environment/: .env.api  .env.application  .env.core  .env.distroless  .env.foundation  .env.gui  .env.pi-build  .env.secure  .env.support  README.md  env.coordination.yml  env.gui  (+8 more)
(+3975 files in other folders)
